--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -8,6 +8,23 @@ commands.c
 complete.c
 compose.c
 compress.c
+config/account.c
+config/address.c
+config/bool.c
+config/command.c
+config/dump.c
+config/enum.c
+config/long.c
+config/magic.c
+config/mbtable.c
+config/number.c
+config/path.c
+config/quad.c
+config/regex.c
+config/set.c
+config/slist.c
+config/sort.c
+config/string.c
 conn/conn_globals.c
 conn/conn_raw.c
 conn/getdomain.c
