--- a/Makefile.autosetup
+++ b/Makefile.autosetup
@@ -422,9 +422,30 @@ distclean: clean
 	$(RM) $(DEPFILES) .clang_complete autosetup/jimsh0 config.h config.log \
 		conststrings.c contrib/Makefile doc/Makefile doc/neomutt.1 \
 		html Makefile po/Makefile test/Makefile
+	$(RM) mutt/*.inc doxygen-build.txt
 
 # Tests for the config code
 config-test: libmutt.a libemail.a libconfig.a
+
+# Web Code docs (doxygen)
+.PHONY: html $(PWD)/mutt
+html:
+	$(SRCDIR)/.travis/gen-tables.sh $(SRCDIR)/conn/*.c $(SRCDIR)/hcache/hcache.h \
+		$(SRCDIR)/imap/*.c $(SRCDIR)/mutt/*.c $(SRCDIR)/ncrypt/*.c \
+		$(SRCDIR)/addrbook.c $(SRCDIR)/body.c $(SRCDIR)/complete.c \
+		$(SRCDIR)/compress.c $(SRCDIR)/copy.c $(SRCDIR)/editmsg.c \
+		$(SRCDIR)/enter.c $(SRCDIR)/envelope.c $(SRCDIR)/filter.c \
+		$(SRCDIR)/flags.c $(SRCDIR)/*from.c $(SRCDIR)/history.c \
+		$(SRCDIR)/hook.c $(SRCDIR)/main.c $(SRCDIR)/mutt_account.c \
+		$(SRCDIR)/mutt_logging.c $(SRCDIR)/mutt_signal.c $(SRCDIR)/mutt_socket.c \
+		$(SRCDIR)/mutt_window.c $(SRCDIR)/mx.c $(SRCDIR)/newsrc.c \
+		$(SRCDIR)/nntp.c $(SRCDIR)/pop.c $(SRCDIR)/pop_auth.c \
+		$(SRCDIR)/postpone.c $(SRCDIR)/progress.c $(SRCDIR)/resize.c \
+		$(SRCDIR)/rfc1524.c $(SRCDIR)/safe_asprintf.c $(SRCDIR)/sidebar.c \
+		$(SRCDIR)/status.c $(SRCDIR)/system.c $(SRCDIR)/tags.c \
+		$(SRCDIR)/terminal.c $(SRCDIR)/version.c
+	doxygen $(SRCDIR)/doxygen/doxygen.conf
+	@grep -v "Consider increasing DOT_GRAPH_MAX_NODES" doxygen-build.txt || true
 
 ##############################################################################
 # include generated dependency files
